--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@
 *.cb
 *.cb2
 .*.lb
-
 ## Intermediate documents:
 *.dvi
 *.xdv
@@ -283,3 +282,5 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+*.synctex.gz
+*.fdb_latexmk
